<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="Home_Title">Bienvenue!</string>
    <string name="Restaurant">Space Burger</string>
    <string name="bvn">Bienvenue chez</string>
    <string name="btn_entrees">Entrées</string>
    <string name="btn_plats">Plats</string>
    <string name="btn_dessert">Déserts</string>
    <string name="btn_entree">Entrées</string>
    <string name="bakcground">background1</string>
    <string name="burger">burger</string>
    <string name="titleCat">Title</string>
    <string name="item">Item</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="icon">icon</string>
    <string name="cart">Cart</string>
    <string name="Laylow" />
    <string name="priceview">0</string>
    <string name="imageView" />
    <string name="mealTitle">meal</string>
    <string name="ingredientsText">"Ingrédients : "</string>
    <string name="totalprice">Total price : 0€</string>
    <string name="dishNumber">0</string>
    <string name="imageView3" />
    <string name="imageView4" />

    <string-array name="tab_starters">
        <item>Salade</item>
        <item>Soupes</item>
        <item>Tapas</item>
    </string-array>
    <string-array name="tab_mains">
        <item>Hamburger</item>
        <item>Steack et Frites</item>
        <item>Pizza</item>
        <item>Pâtes Carbonara</item>
        <item>Poisson</item>
    </string-array>
    <string-array name="tab_desserts">
        <item>Flan</item>
        <item>Brownie</item>
        <item>Cafe gourmand</item>
        <item>Crepe au Nutella</item>
    </string-array>

</resources>