<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_home_scene"
    tools:context=".HomeActivity">

    <!-- Titre en haut à gauche -->

    <ImageView
        android:id="@+id/background"
        android:layout_width="730dp"
        android:layout_height="1266dp"
        android:contentDescription="@string/bakcground"
        android:src="@drawable/rotation_contrast_stained_bright_blue_181766"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/bvn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/bvn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/space_burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/Restaurant"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bvn"
        app:layout_constraintStart_toStartOf="@+id/bvn"
        app:layout_constraintTop_toBottomOf="@+id/bvn" />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="214dp"
        android:layout_height="180dp"
        android:contentDescription="@string/burger"
        android:src="@drawable/dall_e_2023_03_02_13_11_26___burger_pixel_art__removebg_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/space_burger"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/space_burger"
        app:layout_constraintTop_toBottomOf="@+id/space_burger"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/btn_entree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/btn_entree"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/burger"
        app:layout_constraintStart_toStartOf="@+id/burger"
        app:layout_constraintTop_toBottomOf="@+id/burger" />

    <Button
        android:id="@+id/btn_plats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/btn_plats"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_dessert"
        app:layout_constraintEnd_toEndOf="@+id/btn_entree"
        app:layout_constraintStart_toStartOf="@+id/btn_entree"
        app:layout_constraintTop_toBottomOf="@+id/btn_entree" />

    <Button
        android:id="@+id/btn_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/btn_dessert"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_plats"
        app:layout_constraintStart_toStartOf="@+id/btn_plats"
        app:layout_constraintTop_toBottomOf="@+id/btn_plats" />

    <!-- Trait séparateur -->

    <!-- Bouton Entrée -->

    <!-- Bouton Plats -->

    <!-- Bouton Dessert -->

</androidx.constraintlayout.widget.ConstraintLayout>





